--- a/fjordlandet.html
+++ b/fjordlandet.html
@@ -4986,7 +4986,7 @@ For at kunne vise dig målrettede annoncer på denne og andre hjemmesider, samar
                             src="http://localhost:8081/api/image/area/til-den-fugleinteresserede"></a>
 
                       </div>
-                      <script async="" src="/bundle.js"></script>
+                      <script async="" src="https://expo.demo.mapstory.io/bundle.js"></script>
                     </section>
                   </div>
                 </div><!--close column table wrapper. Autoclose: 1 -->
